# ds-u2-actividad-1-listasenlazadassimples-bazbalderas

./: README.md
proyecto/: CMakeLists.txt  Doxyfile
proyecto/arduino/: sensor_simulator.ino
proyecto/include/: GestorSensores.h  ListaSensor.h  SensorBase.h  SensorPresion.h  SensorTemperatura.h  SerialReader.h
proyecto/src/: GestorSensores.cpp  SensorBase.cpp  SensorPresion.cpp  SensorTemperatura.cpp  main.cpp
